# sai-primitives

./: CMakeLists.txt  README.md
docs/: Doxyfile
examples/: CMakeLists.txt
examples/101-collision/: 101-collision.cpp  101-visual.cpp  CMakeLists.txt  config copy.yaml  config.yaml  world.urdf  world_2.urdf
examples/101-collision/data/: collision-avoidance.csv
examples/97-self_collision/: 97-self_collision.cpp  97-self_collision_real.cpp  CMakeLists.txt  config.yaml  plot_data.py
examples/97-self_collision/data/: joints.csv
examples/98-nullspace/: 98-joints.cpp  98-nullspace.cpp  CMakeLists.txt  ppbot.urdf  rrrbot.urdf  world.urdf
html/: HapticDeviceController_8h_source.html  JointLimitAvoidanceTask_8h_source.html  JointTask_8h_source.html  MotionForceTask_8h_source.html  OTG__6dof__cartesian_8h_source.html  OTG__joints_8h_source.html  POPCBilateralTeleoperation_8h_source.html  POPCExplicitForceControl_8h_source.html  RobotController_8h_source.html  SaiPrimitivesCommonDefinitions_8h_source.html  SaiPrimitives_8h_source.html  SingularityHandler_8h_source.html  TemplateTask_8h_source.html  annotated.html  classSaiPrimitives_1_1HapticDeviceController-members.html  classSaiPrimitives_1_1HapticDeviceController.html  classSaiPrimitives_1_1JointLimitAvoidanceTask-members.html  classSaiPrimitives_1_1JointLimitAvoidanceTask.html  classSaiPrimitives_1_1JointTask-members.html  classSaiPrimitives_1_1JointTask.html  classSaiPrimitives_1_1MotionForceTask-members.html  classSaiPrimitives_1_1MotionForceTask.html  classSaiPrimitives_1_1OTG__6dof__cartesian-members.html  (+72 more)
(+129 files in other folders)
